# example-mlir-cpp

./: environment.yml
.github/workflows/: ci.yml
case_failing/: CMakeLists.txt  example.cpp
case_running/: CMakeLists.txt
